# rust-playground

rust-playground/: .gitignore  Cargo.toml
rust-playground/public/: index.html
rust-playground/src/: main.rs
rust-playground/src/config/: keycloak.rs  mod.rs  mongo.rs  postgres.rs
rust-playground/src/routes/: mod.rs  v1.rs
rust-playground/src/routes/v1/: mod.rs  ping.rs  root.rs
rust-playground/src/utils/: logger.rs
